manifests/kube/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices: "true"
        io.kompose.service: gateway
    spec:
      containers:
      - env:
        - name: WAIT_HOSTS
          value: inventory:3201, products:3202, reviews:3203, accounts:3204
        image: gateway
        imagePullPolicy: ""
        name: gateway
        ports:
        - containerPort: 3200
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
