manifests/kube/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: inventory
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inventory
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices: "true"
        io.kompose.service: inventory
    spec:
      containers:
      - image: inventory
        imagePullPolicy: ""
        name: inventory
        ports:
        - containerPort: 3201
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
