manifests/kube/accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: accounts
  name: accounts
spec:
  ports:
  - name: "3204"
    port: 3204
    targetPort: 3204
  selector:
    io.kompose.service: accounts
status:
  loadBalancer: {}
