manifests/kube/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
  - name: "3200"
    port: 3200
    targetPort: 3200
  selector:
    io.kompose.service: gateway
status:
  loadBalancer: {}
