manifests/kube/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: inventory
  name: inventory
spec:
  ports:
  - name: "3201"
    port: 3201
    targetPort: 3201
  selector:
    io.kompose.service: inventory
status:
  loadBalancer: {}
