manifests/kube/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: products
  name: products
spec:
  ports:
  - name: "3202"
    port: 3202
    targetPort: 3202
  selector:
    io.kompose.service: products
status:
  loadBalancer: {}
