manifests/kube/reviews-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: reviews
  name: reviews
spec:
  ports:
  - name: "3203"
    port: 3203
    targetPort: 3203
  selector:
    io.kompose.service: reviews
status:
  loadBalancer: {}
